Fix image loading: Apply |lower filter to dynamic image paths in templates to resolve case-sensitivity issues on Render

--- a/cc/cc/law/templates/categories.html
+++ b/cc/cc/law/templates/categories.html
@@ -78,9 +78,7 @@
             {% else %}
             <a href="/categories/{{i.category}}/act" class="category-card-new dark animate-fade-in">
               {% endif %}
-              <div class="category-image-new">
-                <img src="{% static 'images/' %}{{ i.category }}.jpeg" alt="{{ i.category }}" />
-              </div>
+              <img src="{% static 'images/' %}{{ i.category|lower }}.jpeg" alt="{{ i.category }}" />
               <div class="category-content-new">
                 <h2>{{ i.category }}</h2>
                 <p>{{ i.description }}</p>
