--- a/cc/cc/law/templates/acts.html
+++ b/cc/cc/law/templates/acts.html
@@ -81,7 +81,7 @@
               class="category-card-new dark animate-fade-in">
               {% endif %}
               <div class="category-image-new">
-                <img src="{% static 'images/' %}{{ i.tname }}.jpeg" alt="{{ i.name }}" />
+                <img src="{% static 'images/' %}{{ i.tname|lower }}.jpeg" alt="{{ i.name }}" />
               </div>
               <div class="category-content-new">
                 <h2>{{ i.name }}</h2>
